# fh_tailwindcss

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: deploy.yml
fh_tailwindcss/: __init__.py  tailwind.py
fh_tailwindcss/grid/: __init__.py  gap.py  grid.py  grid_column_start_end.py  grid_columns.py  grid_container.py  grid_template_columns.py  grid_template_rows.py  inline_grid.py
fh_tailwindcss/icon/: icon.py
fh_tailwindcss/input/: __init__.py  input.py  labeled_input.py  labeled_textarea.py  textarea.py
fh_tailwindcss/layout/: __init__.py  columns.py  container.py
fh_tailwindcss/layout/style/: __init__.py  columns.py  container_width.py
fh_tailwindcss/modifier/: __init__.py  attribute_selector.py  feature_query.py  media_query.py  pseudo_class.py  pseudo_element.py  responsive_breakpoint.py  state_group.py
fh_tailwindcss/style/: __init__.py  border_radius.py  font_size.py  font_weight.py  gap.py  height.py  margin.py  padding.py  screen_mapping.py  screen_size.py  size.py  width.py
fh_tailwindcss/text/: __init__.py  label.py
fh_tailwindcss/utility/: __init__.py
fh_tailwindcss/utility/accessibility/: __init__.py  forced_color_adjust.py  screen_reader.py
fh_tailwindcss/utility/background/: __init__.py  background_attachment.py  background_clip.py  background_color.py  background_image.py  background_origin.py  background_position.py  background_repeat.py  background_size.py  gradient_color_stops.py
fh_tailwindcss/utility/border/: __init__.py  border_color.py  border_radius.py  border_style.py  border_width.py  divide_utilities.py  ring_utilities.py
fh_tailwindcss/utility/effect/: __init__.py  background_blend_mode.py  box_shadow.py  box_shadow_color.py  mix_blend_mode.py  opacity.py
fh_tailwindcss/utility/filter/: __init__.py  backdrop_utilities.py  blur.py  brightness.py  (+7 more)
samples/: form_grid.py  grid_container.py
(+50 files in other folders)
